# plasma-applet-ambientnoise

./: CMakeLists.txt  README.md
icons/: CMakeLists.txt
plasmoid/: metadata.json
plasmoid/contents/config/: config.qml
plasmoid/contents/js/: scripts.js
plasmoid/contents/ui/: AddNoisePopup.qml  NoiseListItem.qml  main.qml  settings.qml
